<resources>
    <string name="app_name">EcoPetsApp</string>
    <string name="welcomePhrase">Hola Bienvenidos a Eco Pets</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="signup">REGISTRAR</string>
    <string name="welcomeLogin">Bienvenido a EcoPets, \ndonde comprar es más fácil</string>
    <string name="don_t_have_an_account">No tienes cuenta?</string>
    <string name="login_Text">Ingresar</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo</string>
    <string name="repeat_password">Repetir Contraseña</string>
    <string name="phone_number">Ingresar Teléfono</string>
    <string name="id_user">Ingresar DNI</string>
    <string name="lastname">Ingresar Apellido</string>
    <string name="first_name">Ingresar Nombres</string>
    <string name="address">Ingresar Dirección</string>
    <string name="province">Provincia</string>
    <string name="district">Distrito</string>
    <string name="shopping_cart">Carrito</string>
    <string name="about_us">Sobre nosotros</string>
    <string name="products">Productos</string>
    <string name="social_media">Redes sociales</string>
    <string name="help">Ayuda</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="product_name">Nombre del producto</string>
    <string name="product_description">Descripción del producto</string>
    <string name="quantity_product">Cantidad : 000</string>
    <string name="product_price">Precio</string>
    <string name="shopping_cart_total">Total: 000</string>
    <string name="shopping_cart_continue">Continuar</string>
    <string name="shopping_message">Felicitaciones, Tu compra fue realizada con éxito...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_to_cart">AÑADIR AL CARRITO</string>
    <string name="purchase_confirm">Por favor, confirme su compra</string>
    <string name="purchase_name">Nombre</string>
    <string name="total_amout">Total: $0.00</string>
    <string name="confirm_pay">Confirmar Pago</string>
    <string name="confirm_purchase">Confirmar Pedido</string>
    <string name="title_activity_ejem">EjemActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="ecopets_information">EcoPets es una empresa dedicada a la venta de productos ecológicos y naturales para el bienestar de tus mascotas. Nuestra misión es brindar productos de alta calidad que cuiden la salud y el entorno.</string>
    <string name="ecopets_mision">Misión: Ofrecer productos ecológicos, accesibles y de alta calidad para el cuidado de las mascotas, promoviendo una vida más saludable y sostenible.</string>
    <string name="ecopets_vision">Visión: Ser una empresa líder en productos ecológicos para mascotas, reconocida por la innovación, calidad y compromiso con el medio ambiente.</string>
    <string name="social_medias">Nuestras redes sociales</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="whatsapp_icon">whatsapp_icon</string>
    <string name="facebook_icon">facebook_icon</string>
    <string name="instagram_icon">instagram_icon</string>
    <string name="title_activity_localizar">LocalizarActivity</string>
    <string name="location">Ubicación</string>
</resources>