<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_carrito"
            android:icon="@drawable/shoppingcart"
            android:title="@string/shopping_cart" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/about_us"
            android:title="@string/about_us" />

        <item
            android:id="@+id/nav_buscar"
            android:icon="@drawable/products"
            android:title="@string/products" />

        <item
            android:id="@+id/nav_social_media"
            android:icon="@drawable/social_media"
            android:title="@string/social_media" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/baseline_help_24"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/location"
            android:title="@string/location" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/logout"
            android:title="@string/log_out" />
    </group>

</menu>
