<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SocialMediaActivity">

    <!-- Barra superior (Toolbar) -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/barlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/pastel_brown"
            android:popupTheme="@style/AppTheme.PopupOverlay"
            android:title="EcoPets"/>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Contenido Principal (Información, Misión y Visión) -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_below="@id/barlayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_medias"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#2C3E50"
            android:layout_marginBottom="16dp"
            android:gravity="center" />

        <!-- Redes Sociales - WhatsApp -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <!-- WhatsApp -->
            <ImageView
                android:id="@+id/btnWhatsApp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/whatsappjpeg"
                android:contentDescription="@string/whatsapp_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whatsapp"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColor="#000" />
        </LinearLayout>

        <!-- Redes Sociales - Facebook -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <!-- Facebook -->
            <ImageView
                android:id="@+id/btnFacebook"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/facebooklogo"
                android:contentDescription="@string/facebook_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColor="#000" />
        </LinearLayout>

        <!-- Redes Sociales - Instagram -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <!-- Instagram -->
            <ImageView
                android:id="@+id/btnInstagram"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/instagramjpeg"
                android:contentDescription="@string/instagram_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instagram"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColor="#000" />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>
