<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Título de la actividad -->
    <TextView
        android:id="@+id/tituloConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_purchase"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <!-- Precio total del pedido -->
    <TextView
        android:id="@+id/textoTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_amout"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_below="@id/tituloConfirmar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <!-- Cantidad total del pedido -->


    <!-- Botón para confirmar y pagar -->
    <Button
        android:id="@+id/btnConfirmarPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_pay"
        android:textColor="#FFFFFF"
        android:background="#4CAF50"
        android:layout_below="@id/textoTotal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:padding="10dp" />

</RelativeLayout>
