<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginBottom="15dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nombre_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/dark_lavender"/>

        <ImageView
            android:id="@+id/imagen_producto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/nombre_producto"
            android:scaleType="centerCrop"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/descripcion_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imagen_producto"
            android:text="@string/product_description"
            android:textSize="16dp"
            android:textAlignment="center"
            android:textColor="@color/dark_lavender"/>

        <TextView
            android:id="@+id/precio_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descripcion_producto"
            android:text="@string/product_price"
            android:textSize="18dp"
            android:textAlignment="center"
            android:textColor="@color/dark_lavender"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
